--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "styled-reset": "^4.3.4",
     "tailwindcss": "^2.2.7",
     "twin.macro": "^2.6.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "zustand": "^3.5.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
