--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -14,6 +14,9 @@
       "@khl/container/*": [
         "container/*"
       ],
+      "@khl/context/*": [
+        "context/*"
+      ],
       "@khl/pages": [
         "pages"
       ],
